@@ -295,6 +295,7 @@
   author =	 {Dirk Eddelbuettel},
   title =	 {Seamless R and C++ Integration with Rcpp},
   publisher =	 {Springer},
+  series =	 {Use R!},
   year =	 2013,
   address =	 {New York},
   isbn =	 {978-1-4614-6867-7}
