@@ -1,7 +1,10 @@
 2013-07-31  Dirk Eddelbuettel  <edd@debian.org>
 
+	* inst/doc/Makefile: Rejigged pdf builds in another attempt at
+	pleasing whatever runs the builds on r-forge. L'espoir fait vivre.
+
 	* inst/unitTests/runit.wstring.R: *TEMPORARILY* disabled
-	===== To be revverted before release ======
+	======================================= To be revverted before release ======
 
 2013-07-25  Romain Francois <romain@r-enthusiasts.com>
 
